--- a/src/app/pages/total-cost/total-cost.component.html
+++ b/src/app/pages/total-cost/total-cost.component.html
@@ -1,3 +1,14 @@
+<div class="col-md-12">
+  <div class="card ">
+    <div class="card-header ">
+      <h5 class="card-title">Total Cost</h5>
+      <p class="card-category">Total cost of all courses </p>
+    </div>
+    <div class="card-body ">
+      <canvas id="chartCostCourse"></canvas>
+    </div>
+  </div>
+</div>
 <div class="col-md-4">
     <div class="card ">
       <div class="card-header ">
@@ -5,7 +16,7 @@
         <p class="card-category">Price per employee for each course</p>
       </div>
       <div class="card-body ">
-        <canvas id="chartEmail"></canvas>
+        <canvas id="chartNamePriceEmployee"></canvas>
       </div>
     </div>
   </div>
