--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <div class="sidebar-wrapper">
   <div class="logo">
       <div class="logo-image-small">
-        <img src="assets/img/upm.png">
+        <img src="assets/img/upm.PNG">
       </div>
   </div>
     <ul class="nav">
