--- a/src/app/pages/user-form/user-form.component.html
+++ b/src/app/pages/user-form/user-form.component.html
@@ -24,8 +24,8 @@
               </div>
               <div class="col-md-3 px-1">
                 <div class="form-group">
-                  <label>Age</label>
-                  <input type="number" [formControl]="age" placeholder="Age" class="form-control input-no-border">
+                  <label>Birth date</label>
+                  <input type="datetime" [formControl]="brithDate" placeholder="brithDate" class="form-control input-no-border">
                 </div>
               </div>
               <div class="col-md-5 px-1" style="margin-left: 12px;">
